@@ -101,10 +101,37 @@ public:
 
 static TimeFormats timeformats;
 
-double stringToTime(const std::string s) {
+// given a ptime object, return (fractional) seconds since epoch
+// account for localtime, and also account for dst
+double ptToDouble(const bt::ptime & pt) {
 
     //This local adjustor depends on the machine TZ settings-- highly dangerous!
     typedef boost::date_time::c_local_adjustor<bt::ptime> local_adj;
+
+    const bt::ptime timet_start(boost::gregorian::date(1970,1,1));
+    const bt::ptime local_timet_start = local_adj::utc_to_local(timet_start);
+
+    // seconds sincr epoch (in local time) -- misses DST adjustment
+    bt::time_duration tdiff = pt - local_timet_start;
+    //Rcpp::Rcout << "tdiff is " << tdiff << std::endl;
+    //Rcpp::Rcout << "pt is " << pt << std::endl;
+
+    // hack-ish: go back to struct tm to use its tm_isdst field
+    time_t secsSinceEpoch = tdiff.total_seconds();
+    struct tm* localAsTm = localtime(&secsSinceEpoch);
+    //Rcpp::Rcout << "Adj is " << localAsTm->tm_isdst << std::endl;
+
+    // Define BOOST_DATE_TIME_POSIX_TIME_STD_CONFIG to use nanoseconds
+    // (and then use diff.total_nanoseconds()/1.0e9;  instead)
+    //
+    // note dst correction here -- needed as UTC offset is correct but does not
+    // contain the additional DST adjustment
+    return tdiff.total_microseconds()/1.0e6 - localAsTm->tm_isdst*60*60;
+}
+
+// given a string with a (date)time object, try all formats til we parse one
+// conversion of ptime object to double done by ptToDouble()
+double stringToTime(const std::string s) {
 
     bt::ptime pt, ptbase;
 
@@ -116,29 +143,7 @@ double stringToTime(const std::string s) {
         is >> pt;
     }
 
-    if (pt == ptbase) {
-        return NAN;
-    } else {
-        const bt::ptime timet_start(boost::gregorian::date(1970,1,1));
-        const bt::ptime local_timet_start = local_adj::utc_to_local(timet_start);
-
-        // seconds sincr epoch (in local time) -- misses DST adjustment
-        bt::time_duration tdiff = pt - local_timet_start;
-        //Rcpp::Rcout << "tdiff is " << tdiff << std::endl;
-        //Rcpp::Rcout << "pt is " << pt << std::endl;
-
-        // hack-ish: go back to struct tm to use its tm_isdst field
-        time_t secsSinceEpoch = tdiff.total_seconds();
-        struct tm* localAsTm = localtime(&secsSinceEpoch);
-        //Rcpp::Rcout << "Adj is " << localAsTm->tm_isdst << std::endl;
-
-        // Define BOOST_DATE_TIME_POSIX_TIME_STD_CONFIG to use nanoseconds
-        // (and then use diff.total_nanoseconds()/1.0e9;  instead)
-        //
-        // note dst correction here -- needed as UTC offset is correct but does not
-        // contain the additional DST adjustment
-        return tdiff.total_microseconds()/1.0e6 - localAsTm->tm_isdst*60*60;
-    }
+    return (pt == ptbase) ? NAN : ptToDouble(pt);
 }
 
 template <int RTYPE>
@@ -226,9 +231,6 @@ void addFormats(Rcpp::CharacterVector fmt) {
 // [[Rcpp::export]]
 Rcpp::NumericVector testFormat(const std::string fmt, const std::string s, const std::string tz = "") {
     
-    //This local adjustor depends on the machine TZ settings-- highly dangerous!
-    typedef boost::date_time::c_local_adjustor<bt::ptime> local_adj;
-    
     bt::ptime pt, ptbase;
 
     std::istringstream is(s);
@@ -237,34 +239,12 @@ Rcpp::NumericVector testFormat(const std::string fmt, const std::string s, const
     is.imbue(loc);
     is >> pt;
 
-    double timeval = NAN;
-    
-    if (pt == ptbase) {
-        timeval = NAN;
-    } else {
-        const bt::ptime timet_start(boost::gregorian::date(1970,1,1));
-        const bt::ptime local_timet_start = local_adj::utc_to_local(timet_start);
+    double timeval = (pt == ptbase) ? NAN : ptToDouble(pt);
 
-        // seconds sincr epoch (in local time) -- misses DST adjustment
-        bt::time_duration tdiff = pt - local_timet_start;
-        //Rcpp::Rcout << "tdiff is " << tdiff << std::endl;
-        //Rcpp::Rcout << "pt is " << pt << std::endl;
-
-        // hack-ish: go back to struct tm to use its tm_isdst field
-        time_t secsSinceEpoch = tdiff.total_seconds();
-        struct tm* localAsTm = localtime(&secsSinceEpoch);
-        //Rcpp::Rcout << "Adj is " << localAsTm->tm_isdst << std::endl;
-
-        // Define BOOST_DATE_TIME_POSIX_TIME_STD_CONFIG to use nanoseconds
-        // (and then use diff.total_nanoseconds()/1.0e9;  instead)
-        //
-        // note dst correction here -- needed as UTC offset is correct but does not
-        // contain the additional DST adjustment
-        timeval = tdiff.total_microseconds()/1.0e6 - localAsTm->tm_isdst*60*60;
-    }
     Rcpp::NumericVector pv(1);
     pv(0) = timeval;
     pv.attr("class") = Rcpp::CharacterVector::create("POSIXct", "POSIXt");
     pv.attr("tzone") = tz;
+    
     return pv;
 }
